fix: remove @Future on fechaHora, fix CORS config for dev